--- a/homework-tables_logo.html
+++ b/homework-tables_logo.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tables and images</title>
-    <style>
+   <style>
         table, th, td {
-  border: 1px solid;
+  border: 1px solid; text-align: center; width: 400px
 }
+
     </style>
 </head>
 <body>
