--- a/homework-tables_logo.html
+++ b/homework-tables_logo.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <h1>Table and Images</h1>
     <Table>
         <caption>Logo of Languages</caption>
         <tr>
